--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hilalli Natural Products</title>
+    <title>Hillali Natural Products</title>
     <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hilalli Natural Products</h1>
+        <h1>Hillali Natural Products</h1>
         <h3>natural@hillali.com</h3>
         <a href="https://wa.me/972522456856" class="whatsapp-btn">Chat on WhatsApp</a>
     </div>
